--- a/index.html
+++ b/index.html
@@ -182,30 +182,9 @@
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>Entre em Contato</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+							<p>Estamos prontos para lhe atender e colocar sua empresa em um novo patamar, utilize os meios abaixo para nos contatar.</p>
 							<div class="split style1">
-								<section>
-									<form method="post" action="#">
-										<div class="fields">
-											<div class="field half">
-												<label for="name">Nome</label>
-												<input type="text" name="name" id="name" />
-											</div>
-											<div class="field half">
-												<label for="email">Email</label>
-												<input type="text" name="email" id="email" />
-											</div>
-											<div class="field">
-												<label for="message">Mensagem</label>
-												<textarea name="message" id="message" rows="5"></textarea>
-											</div>
-										</div>
-										<ul class="actions">
-											<li><a href="" class="button submit">Enviar Mensagem</a></li>
-										</ul>
-									</form>
-								</section>
-								<section>
+								
 									<ul class="contact">
 										<li>
 											<h3>Email</h3>
