--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
 -->
 <html>
 	<head>
-		<title>Hyperspace by HTML5 UP</title>
+		<title>Xistemas</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+
+		<meta name="description" content="A Xistemas presta serviços de gestão de projetos, consultoria em gestão de riscos, consultoria para a lei geral de proteção de dados, consultoria em sistemas hoteleiros, desenvolve e implanta sistemas para academias com controle de acesso." />
+		<meta name="keywords" content="aplicativos, xistemas, xisgym, foodxis, komorebi, gestão de projetos, gestão de riscos, lgpd, academias, academia, natação, musculação, crossfit, pilates, catraca, biometria, controle de acesso, lei geral de proteção de dados, unique, bauru, consultoria, ti, tecnologia da informação, sistema hoteleiro, hotelaria, control id, inovação, automação, sat, impressora, impressoras" />
+		
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
