--- a/index.html
+++ b/index.html
@@ -58,8 +58,9 @@
 									<h2>Quem Somos</h2>
 									<p>
 										A <strong>Xistemas</strong> é uma jovem empresa de TI, 
-										cujo fundador possuiu uma <b>experiência</b> de mais de 27 anos como gestor de TI e projetos,
-										além de desenvolvedor de soluções em softwares e automações comerciais.  
+										que tem em seu DNA a <b>experiência de mais de 27 anos</b> de seu fundador como gestor de TI e projetos,
+										desenvolvedor de soluções em softwares e automações comerciais, além da vivência acadêmica 
+										formando novos talentos em TI & Computação.  
 									</p>
 									<p>	
 										Nossa principal característica é <strong>desenvolver soluções</strong> pensando em resolver as <b>dores</b> da sua empresa,
