--- a/index.html
+++ b/index.html
@@ -154,12 +154,12 @@
 								<section>
 									<span class="icon solid major fa-clipboard"></span>
 									<h3>Consultoria & Serviços</h3>
-									<p>Gestão de Projetos de TI;<br>
-										Gestão de Riscos de TI;<br>
-										Auditoria e Levantamento de Requisitos, Melhorias e Erros em sistemas legados;<br>
-										LGPD;<br>
-										Marketing Digital: geração de conteúdo e presença nas redes sociais;<br>
-										Mentoria para Startups & Gestão da Inovação. 
+									<p>- Gestão de Projetos de TI;<br>
+										- Gestão de Riscos de TI;<br>
+										- Auditoria e Levantamento de Requisitos, Melhorias e Erros em sistemas legados;<br>
+										- LGPD;<br>
+										- Marketing Digital: geração de conteúdo e presença nas redes sociais;<br>
+										- Mentoria para Startups & Gestão da Inovação. 
 									</p>	
 								</section>
 								<section>
@@ -187,27 +187,27 @@
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>Entre em Contato</h2>
-							<p>Estamos prontos para lhe atender e colocar sua empresa em um novo patamar, utilize os meios abaixo para nos contatar.</p>
+							<p>Estamos prontos para lhe atender e colocar sua empresa em um novo patamar, basta clicar nos contatos abaixo.</p>
 							<div class="split style1">
 								
 									<ul class="contact">
 										<li>
 											<h3>Email</h3>
-											<a href="mailto:contato@xistemas.com.br" class="icon fa-envelope"> contato@xistemas.com.br</a>
+											<a href="mailto:contato@xistemas.com.br" class="icon fa-envelope" target="_blank"> contato@xistemas.com.br</a>
 										</li>
 										<li>
 											<h3>WhatsApp</h3>
 											<span>
-												<a href="https://api.whatsapp.com/send?phone=551432063688" class="icon brands fa-whatsapp">
+												<a href="https://api.whatsapp.com/send?phone=551432063688" class="icon brands fa-whatsapp" target="_blank">
 												(14) 3206-3688</a>
 											</span>
 										</li>
 										<li>
 											<h3>Mídias Sociais</h3>
 											<ul class="icons">
-												<li><a href="https://www.facebook.com/Xistemas/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-												<li><a href="https://www.instagram.com/xistemas/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-												<li><a href="https://www.linkedin.com/company/42462179" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+												<li><a href="https://www.facebook.com/Xistemas/" class="icon brands fa-facebook-f" target="_blank"><span class="label">Facebook</span></a></li>
+												<li><a href="https://www.instagram.com/xistemas/" class="icon brands fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
+												<li><a href="https://www.linkedin.com/company/42462179" class="icon brands fa-linkedin-in" target="_blank"><span class="label">LinkedIn</span></a></li>
 											</ul>
 										</li>
 									</ul>
@@ -222,7 +222,7 @@
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; by Xistemas 2021. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; by Xistemas 2021. All rights reserved.</li><li>Design: <a href="http://html5up.net" target="_blank">HTML5 UP</a></li>
 					</ul>
 				</div>
 			</footer>
