--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
 		<meta name="description" content="A Xistemas presta serviços de gestão de projetos, consultoria em gestão de riscos, consultoria para a lei geral de proteção de dados, consultoria em sistemas hoteleiros, desenvolve e implanta sistemas para academias com controle de acesso." />
 		<meta name="keywords" content="aplicativos, xistemas, xisgym, foodxis, komorebi, gestão de projetos, gestão de riscos, lgpd, academias, academia, natação, musculação, crossfit, pilates, catraca, biometria, controle de acesso, lei geral de proteção de dados, unique, bauru, consultoria, ti, tecnologia da informação, sistema hoteleiro, hotelaria, control id, inovação, automação, sat, impressora, impressoras" />
 		
+		<meta property="og:title" content="Xistemas Tecnologia da Informação" />
+		<meta property="og:type" content="website" />
+		<meta property="og:site_name" content="Xistemas">
+		<meta property="og:description" content="Desenvolvimento de Sistemas" />
+		<meta property="og:image" itemprop="image" content="https://xistemas.com.br/images/Xistemas3_300.png">
+		
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
