--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<meta property="og:type" content="website" />
 		<meta property="og:site_name" content="Xistemas">
 		<meta property="og:description" content="Desenvolvimento de Sistemas" />
-		<meta property="og:image" itemprop="image" content="https://xistemas.com.br/images/Xistemas3_300.png">
+		<meta property="og:image" itemprop="image" content="http://xistemas.com.br/images/Xistemas3_300.png">
 		
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
