--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<meta name="keywords" content="aplicativos, xistemas, xisgym, foodxis, komorebi, gestão de projetos, gestão de riscos, lgpd, academias, academia, natação, musculação, crossfit, pilates, catraca, biometria, controle de acesso, lei geral de proteção de dados, unique, bauru, consultoria, ti, tecnologia da informação, sistema hoteleiro, hotelaria, control id, inovação, automação, sat, impressora, impressoras" />
 		
 		<meta property="og:title" content="Xistemas Tecnologia da Informação" />
+		<meta property="og:url" content="http://www.xistemas.com.br" />
 		<meta property="og:type" content="website" />
 		<meta property="og:site_name" content="Xistemas">
 		<meta property="og:description" content="Desenvolvimento de Sistemas" />
