--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<meta property="og:type" content="website" />
 		<meta property="og:site_name" content="Xistemas">
 		<meta property="og:description" content="Desenvolvimento de Sistemas" />
-		<meta property="og:image" itemprop="image" content="http://xistemas.com.br/images/Xistemas3_300.png">
+		<meta property="og:image" itemprop="image" content="http://xistemas.com.br/images/Xistemas2025_300.png">
 		
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
@@ -33,7 +33,7 @@
 		<!-- Sidebar -->
 			<section id="sidebar">
 				<div class="inner">
-					<img src="images/Xistemas3_300.png">
+					<img src="images/Xistemas2025_300.png">
 					<nav>
 						<ul>
 							<li><a href="#intro">Bem-vindo</a></li>
@@ -51,7 +51,7 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1>Xistemas</h1>
+							<h1>Xistemas - 2025: Ano 10!</h1>
 							<p>Tecnologia da Informação Humanizada, a solução para seu negócio.</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Saiba mais</a></li>
@@ -62,15 +62,15 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section class>
-							<a href="#" class="image" style="background-image: url('images/img01.png'); background-position: 50% 55%;">
-								<img src="images/img01.png" alt="" data-position="50% 55%" style="display: none;">
+							<a href="#" class="image" style="background-image: url('images/img01_2025.png'); background-position: 50% 55%;">
+								<img src="images/img01_2025.png" alt="" data-position="50% 55%" style="display: none;">
 							</a>
 							<div class="content">
 								<div class="inner">
 									<h2>Quem Somos</h2>
 									<p>
 										A <strong>Xistemas</strong> é uma jovem empresa de TI, 
-										que tem em seu DNA a <b>experiência de mais de 27 anos</b> de seu fundador como gestor de TI e projetos,
+										que tem em seu DNA a <b>experiência de mais de 30 anos</b> de seu fundador como gestor de TI e projetos,
 										desenvolvedor de soluções em softwares e automações comerciais, além da vivência acadêmica 
 										formando novos talentos em TI & Computação.  
 									</p>
