--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
 		<!-- Intro -->
 		<section id="intro" class="wrapper style1 fullscreen fade-up">
 			<div class="inner">
-				<h1>Xistemas - 2025: Ano 10!</h1>
+				<h1>Xistemas</h1>
+				<h2>2025: Ano 10!</h2>
 				<p>Tecnologia da Informação Humanizada, a solução para seu negócio.</p>
 				<ul class="actions">
 					<li><a href="#one" class="button scrolly">Saiba mais</a></li>
